--- a/docs/panos_tutorials_address_group.mdx
+++ b/docs/panos_tutorials_address_group.mdx
@@ -9,6 +9,10 @@ keywords:
   - Address Group
   - PAN-OS
 ---
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 In this tutorial covers how to add & populate Static and Dynamic Address Groups to PAN-OS using API. If you are looking into adding IPs to Dynamic Address Groups using the Dynamic Address Group API, please refer to the [dedicated tutorial](panos_dag_qs).
 
 This tutorial has 2 sections: the first section covers [static Address Groups](#static-address-groups), the second section covers  [Dynamic Address Groups](#dynamic-address-groups).
@@ -35,14 +39,32 @@ Static Address Groups are address groups whose content is statically defined ins
 
 ### Step 1: Grab the API Key
 
-#### Using XML API
+<Tabs
+  defaultValue="xml"
+  values={[
+    { label: 'XML API', value: 'xml', },
+    { label: 'REST API', value: 'rest', },
+    { label: 'pan-python', value: 'pp', },
+  ]
+}>
+<TabItem value="xml">
+
 Please refer to the [XML API Quickstart](xmlapi_qs) for instructions.
 
-#### Using REST API
-Please refer to the [XML API Quickstart](restapi_qs) for instructions.
+</TabItem>
 
-#### Using pan-python
+<TabItem value="rest">
+
+Please refer to the [REST API Quickstart](restapi_qs) for instructions.
+
+</TabItem>
+
+<TabItem value="pp">
+
 Please refer to the [pan-python guide](panpython_apikey) for details.
+
+</TabItem>
+</Tabs>
 
 ### Step 2: Create an Address object (optional)
 
@@ -50,7 +72,17 @@ Static Address Groups cannot be empty. If you don't have an Address object alrea
 
 The following code will create a new Address object called `TutorialEntry` with IP `1.1.1.1/32` (Hello there Cloudflare!)
 
-#### Using XML API
+<Tabs
+  defaultValue="xml"
+  values={[
+    { label: 'XML API', value: 'xml', },
+    { label: 'REST API', value: 'rest', },
+    { label: 'pan-python (CLI)', value: 'pp-cli', },
+    { label: 'pan-python (Python)', value: 'pp-py', },
+  ]
+}>
+<TabItem value="xml">
+
 The following code is for a Unix shell. To avoid fighting with string escapes, we use environment variables to store API Key, XPath and the new entry.
 ```bash
 export API_KEY="<Your API Key here>"
@@ -65,7 +97,10 @@ Response should be:
 <response status="success" code="20"><msg>command succeeded</msg></response>
 ```
 
-#### Using REST API
+</TabItem>
+
+<TabItem value="rest">
+
 ```bash
 export API_KEY="<Your API Key here>"
 curl -XPOST "https://<firewall>/restapi/9.0/Objects/Addresses?location=vsys&vsys=vsys1&key=$API_KEY&name=TutorialEntry" -d '
@@ -84,7 +119,10 @@ Response should be:
 {"@status":"success","@code":"20","msg":"command succeeded"}
 ```
 
-#### Using pan-python (CLI)
+</TabItem>
+
+<TabItem value="pp-cli">
+
 ```bash
 export API_KEY="<Your API Key here>"
 export ELEMENT_VALUE="<ip-netmask>1.1.1.1/32</ip-netmask>"
@@ -98,7 +136,10 @@ Response should be:
 <response code="20" status="success"><msg>command succeeded</msg></response>
 ```
 
-#### Using pan-python (Python)
+</TabItem>
+
+<TabItem value="pp-py">
+
 ```python
 #!/usr/bin/env python3
 
@@ -127,11 +168,24 @@ except pan.xapi.PanXapiError as msg:
     sys.exit(1)
 ```
 
+</TabItem>
+</Tabs>
+
 ### Step 3: Create the Address Group
 
 Now we can create our static Address Group, we will call it *TutorialAddressGroup*.
 
-#### Using XML API
+<Tabs
+  defaultValue="xml"
+  values={[
+    { label: 'XML API', value: 'xml', },
+    { label: 'REST API', value: 'rest', },
+    { label: 'pan-python (CLI)', value: 'pp-cli', },
+    { label: 'pan-python (Python)', value: 'pp-py', },
+  ]
+}>
+<TabItem value="xml">
+
 The following code is for a Unix shell. To avoid fighting with string escapes, we use environment variables to store API Key, XPath and the new entry.
 ```bash
 export API_KEY="<Your API Key here>"
@@ -146,7 +200,10 @@ Response should be:
 <response status="success" code="20"><msg>command succeeded</msg></response>
 ```
 
-#### Using REST API
+</TabItem>
+
+<TabItem value="rest">
+
 ```bash
 export API_KEY="<Your API Key here>"
 curl -XPOST "https://<firewall>/restapi/9.0/Objects/AddressGroups?location=vsys&vsys=vsys1&key=$API_KEY&name=TutorialAddressGroup" -d '{
@@ -165,7 +222,10 @@ Response should be:
 {"@status":"success","@code":"20","msg":"command succeeded"}
 ```
 
-#### Using pan-python (CLI)
+</TabItem>
+
+<TabItem value="pp-cli">
+
 ```bash
 export API_KEY="<Your API Key here>"
 export ELEMENT_VALUE="<member>TutorialEntry</member>"
@@ -179,7 +239,10 @@ Response should be:
 <response code="20" status="success"><msg>command succeeded</msg></response>
 ```
 
-#### Using pan-python (Python)
+</TabItem>
+
+<TabItem value="pp-py">
+
 ```python
 #!/usr/bin/env python3
 
@@ -207,7 +270,9 @@ except pan.xapi.PanXapiError as msg:
     print('set:', msg, file=sys.stderr)
     sys.exit(1)
 ```
-<!--END_DOCUSAURUS_CODE_TABS-->
+
+</TabItem>
+</Tabs>
 
 ### Step 4: Edit the Address Group (optional)
 
@@ -215,7 +280,16 @@ We could commit now, but for the sake of this tutorial let's edit the address gr
 
 Before starting, create a new Address object called *TutorialEntry2* following [Step 2](#step-2-create-an-address-object-optional).
 
-#### Using XML API
+<Tabs
+  defaultValue="xml"
+  values={[
+    { label: 'XML API', value: 'xml', },
+    { label: 'REST API', value: 'rest', },
+    { label: 'pan-python (CLI)', value: 'pp-cli', },
+    { label: 'pan-python (Python)', value: 'pp-py', },
+  ]
+}>
+<TabItem value="xml">
 
 We can use an *edit* request here for the PAN-OS XML API. It is a bit weird, as the element should overlap with the XPath (`<static>` appears on both XPath and inside the element).
 
@@ -232,7 +306,9 @@ Response should be:
 <response status="success" code="20"><msg>command succeeded</msg></response>
 ```
 
-#### Using REST API
+</TabItem>
+
+<TabItem value="rest">
 
 Using *PUT* we can replace the existing definition of the AddressGroup with a new one:
 
@@ -254,7 +330,10 @@ Response should be:
 {"@status":"success","@code":"20","msg":"command succeeded"}
 ```
 
-#### Using pan-python (CLI)
+</TabItem>
+
+<TabItem value="pp-cli">
+
 ```bash
 export API_KEY="<Your API Key here>"
 export ELEMENT_XPATH="/config/devices/entry[@name='localhost.localdomain']/vsys/entry[@name='vsys1']/address-group/entry[@name='TutorialAddressGroup']/static"
@@ -268,7 +347,9 @@ Response should be:
 <response code="20" status="success"><msg>command succeeded</msg></response>
 ```
 
-#### Using pan-python (Python)
+</TabItem>
+
+<TabItem value="pp-py">
 
 ```python
 #!/usr/bin/env python3
@@ -297,7 +378,9 @@ except pan.xapi.PanXapiError as msg:
     print('edit:', msg, file=sys.stderr)
     sys.exit(1)
 ```
-<!--END_DOCUSAURUS_CODE_TABS-->
+
+</TabItem>
+</Tabs>
 
 ### Step 5: Commit!
 
@@ -308,7 +391,16 @@ This is where pan-python and the SDKs start shining. The commit process via the 
 
 This process is easy to implement with the SDKs as they include functions to issue the commit request and automatically follow the resulting job.
 
-#### Using XML API
+<Tabs
+  defaultValue="xml"
+  values={[
+    { label: 'XML API', value: 'xml', },
+    { label: 'REST API', value: 'rest', },
+    { label: 'pan-python (CLI)', value: 'pp-cli', },
+    { label: 'pan-python (Python)', value: 'pp-py', },
+  ]
+}>
+<TabItem value="xml">
 
 Let's do a commit in the hard way. First we send the request and then we follow the job using `curl`.
 
@@ -387,11 +479,15 @@ Once finished, the status will be *FIN* and you can check if the commit was succ
 </response>
 ```
 
-#### Using REST API
+</TabItem>
+
+<TabItem value="rest">
 
 *Not supported yet* use the PAN-OS XML API to commit.
 
-#### Using pan-python (CLI)
+</TabItem>
+
+<TabItem value="pp-cli">
 
 pan-python can do all the tracking work for you. Just use the `--sync` command line argument to tell `panxapy.py` to start tracking the commit job:
 
@@ -411,7 +507,9 @@ Configuration committed successfully
 ... dump of xml response ...
 ```
 
-#### Using pan-python (Python)
+</TabItem>
+
+<TabItem value="pp-py">
 
 The pan-python library exposes a nice function to start the commit and track the job for you (note *sync=True* in the *commit* call):
 
@@ -441,7 +539,9 @@ except pan.xapi.PanXapiError as msg:
 
 print(xapi.xml_root())
 ```
-<!--END_DOCUSAURUS_CODE_TABS-->
+
+</TabItem>
+</Tabs>
 
 ## Dynamic Address Groups
 
@@ -466,7 +566,16 @@ The content of a Dynamic Address Group is not a static list of Address objects, 
 
 In this example we will create a new Dynamic Address Group called *TutorialDAG* with filter `tag1 AND tag2`. All the IPs pushed via the DAG API with both `tag1` **and** `tag2` will be automatically added to this DAG.
 
-#### Using XML API
+<Tabs
+  defaultValue="xml"
+  values={[
+    { label: 'XML API', value: 'xml', },
+    { label: 'REST API', value: 'rest', },
+    { label: 'pan-python (CLI)', value: 'pp-cli', },
+    { label: 'pan-python (Python)', value: 'pp-py', },
+  ]
+}>
+<TabItem value="xml">
 
 Note the element content is URL encoded:
 
@@ -483,7 +592,9 @@ Response should be:
 <response status="success" code="20"><msg>command succeeded</msg></response>
 ```
 
-#### Using REST API
+</TabItem>
+
+<TabItem value="rest">
 
 ```bash
 export API_KEY="<Your API Key here>"
@@ -503,7 +614,10 @@ Response should be:
 {"@status":"success","@code":"20","msg":"command succeeded"}
 ```
 
-#### Using pan-python (CLI)
+</TabItem>
+
+<TabItem value="pp-cli">
+
 ```bash
 export API_KEY="<Your API Key here>"
 export ELEMENT_VALUE="<filter>tag1 AND tag2</filter>"
@@ -517,7 +631,9 @@ Response should be:
 <response code="20" status="success"><msg>command succeeded</msg></response>
 ```
 
-#### Using pan-python (Python)
+</TabItem>
+
+<TabItem value="pp-py">
 
 ```python
 #!/usr/bin/env python3
@@ -546,7 +662,9 @@ except pan.xapi.PanXapiError as msg:
     print('set:', msg, file=sys.stderr)
     sys.exit(1)
 ```
-<!--END_DOCUSAURUS_CODE_TABS-->
+
+</TabItem>
+</Tabs>
 
 ### Step 3: Commit!
 
