Update asset references

--- a/docs/automation_tutorials_ansible_srule.mdx
+++ b/docs/automation_tutorials_ansible_srule.mdx
@@ -187,7 +187,7 @@ PLAY RECAP *********************************************************************
 
 On Panorama:
 
-![Rule Added!](/img/automation_tutorials_ansible_srule_1.png)
+![Rule Added!](../docs/assets/automation_tutorials_ansible_srule_1.png)
 
 ### Commit
 
@@ -386,7 +386,7 @@ PLAY RECAP *********************************************************************
 
 On Panorama:
 
-![Rule Added!](/img/automation_tutorials_ansible_srule_2.png)
+![Rule Added!](assets/automation_tutorials_ansible_srule_2.png)
 
 ### Idempotency
 
