--- a/docs/expedition/workflow.mdx
+++ b/docs/expedition/workflow.mdx
@@ -1,7 +1,7 @@
 ---
 id: workflow
 title: Expedition Automation Workflows
-sidebar_label: Automation Workflows
+sidebar_label: Automation Workflows Examples
 hide_title: false
 description: Expedition Automation Workflows
 keywords:
@@ -13,9 +13,24 @@ keywords:
   - migration
   - firewall
   - configuration
+  - automation
 
 image: /img/expedition.png
 ---  
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import Link from "@docusaurus/Link"; 
+
+**Choose language for code snippet**
+
+<a className="button button--primary" onClick={() => SetLanguage('python')}>
+Python
+</a>&nbsp;
+<a className="button button--info" onClick={() => SetLanguage('php')}>
+Php
+</a>  
+<br/>
+<br/>
 
 In this section we present some workflow examples to show you how to consume the Expedition-APIs. The example scripts presented here can be found under:    
 
@@ -25,7 +40,7 @@ https://conversionupdates.paloaltonetworks.com/expedition2/examples/workflows.zi
 
 
 
-### 1. Generating Expedition API Keys  
+### Step 1. Generating Expedition API Keys  
 Nearly all the API calls to Expedition will require authentication. This is done through the use of API keys. The first step is to log into Expedition and retrieve an API key that would offer us access to later API calls.  
 
 As shown in Snippet 1, defines the Expedition IP to connect ($ip), credentials to be used for authentication ($credentials) and the URL to access the login route ($url).  
@@ -35,11 +50,42 @@ Once those variables have been provided, creates and establishes an SSL connecti
 Expedition API responses are in JSON format In the case of a login API call, in the content section we will obtain an API key  and a csrfToken. The first can be used for API consumption in scripts, while the second is intended for HTTPS Web UI requests. While the API key has an expiration time of 1 month and extends its validity time on every login (it may change in the future), a csrfToken has a shorter validity and gets regenerated for each login call.    
 
 We collect the api_key by accessing the corresponding JSON element and remove the surrounding quotes to access the API key string and format it for future authenticated API calls.  
-This authentication credentials are later prepared in a $hed variable that we will attach into the headers of the API calls we send in the future.  
+:::note
+This authentication credentials are later prepared in a **$hed** variable that we will attach into the headers of the API calls we send in the future.
+:::  
 
-**PHP Snippet 1:**  
-```javascript  
 
+
+API syntax for Login to Expedition:  
+
+| Method | EndPoint                                   | Parameters | Example Value                                                    |
+|-------------|--------------------------------------------|------------|------------------------------------------------------------------|
+|       POST     | `https://<YourExpeditionIP>/api/v1/login` |            | {     **"username"** :   "admin" ,     **"password"** :   "paloalto"   } |  
+
+<Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
+values={[
+{ label: 'Python', value: 'python', },
+{ label: 'Php', value: 'php', },
+]
+}>  
+<TabItem value="python">  
+
+```python
+print('LOGIN')
+data = {"username":"anna", "password":"1234567890"}
+r = requests.post('https://'+ip+'/api/v1/login', data=data, verify=False)
+response=r.json()
+apiKey = json.dumps(response['Contents']['response']['data']['content']['api_key'])
+auth_token = apiKey[1:-1]
+print(auth_token)
+print('')
+
+hed = {'Authorization': 'Bearer ' + auth_token}  
+```
+</TabItem> 
+<TabItem value="php">  
+
+```php
 echo  "LOGIN \n";
 
 $ip="127.0.0.1"; //Enter here your Expedition IP reachable from the Script execution machine
@@ -66,16 +112,44 @@ echo "\n";
 $hed = array(
     'Authorization: Bearer ' . $auth_token,
 );  
-```  
+```
+</TabItem>  
+</Tabs>  
 
-### 2. Creating an Expedition project    
+### Step 2. Creating an Expedition project    
 In the large amount of automation cases, we will require having an Expedition project. Making a POST call to the projects route, we can create a project with a desired name.
 By default, the creator of a project is as well one of the project administrators.
 Notice that this time we attach the credentials $hed in the curl headers to demonstrate we have permission to create a project.  
 
+API syntax for creating a new project:  
 
-**PHP Snippet 2:**  
-```javascript
+| Method | EndPoint                                   | Parameters | Example Value                                                    |
+|-------------|--------------------------------------------|------------|------------------------------------------------------------------|
+|       POST     | `https://<YourExpeditionIP>/api/v1/projects` |            | {    **"project"**: "project1", **"description"**: "Project for testing" } |
+<Tabs defaultValue={typeof window !== 'undefined' && localStorage.getItem('defaultLanguage') ? localStorage.getItem('defaultLanguage') : 'python'}
+values={[
+{ label: 'Python', value: 'python', },
+{ label: 'Php', value: 'php', },
+]
+}>  
+<TabItem value="python">  
+
+```python
+print('CREATE NEW PROJECT')
+data = {"project":projectName}
+r = requests.post('https://'+ip+'/api/v1/projects', data=data, verify=False, headers=hed)
+response=r.json()
+success = json.dumps(response['Contents']['success'])
+if success=='true':
+    #print('New project created successfully')
+    projectId = json.dumps(response['Contents']['response']['data']['content']['id'])
+    print(json.dumps(response['Contents']['response']['response-messages']['messages'][0]['message']))
+print('')
+```
+</TabItem> 
+<TabItem value="php"> 
+
+```php
 
 echo "\n";
 echo "CREATE NEW PROJECT\n";
@@ -98,7 +172,10 @@ if ($success=='true'){
 }
 echo "\n";
 ```  
-### 3. Upload the 3rd party vendor (source) configuration into Expedition  
+</TabItem>
+</Tabs>  
+
+### Step 3. Upload the 3rd party vendor (source) configuration into Expedition  
 The migration process would require to upload one of more configuration files to be migrated. A minimum one would be the original vendor configuration file, and we plan to support bringing also routing table files to support dynamic routing tables which values are not specified in the firewall configuration.
 
 For example, you can upload the cisco configration "cisco.asa.txt" within the folder:  
@@ -108,12 +185,32 @@ For example, you can upload the cisco configration "cisco.asa.txt" within the fo
 
 This folder should be reachable by the `www-data` user and its content should be readable by the user as well.
 
-### 4. Converting the source configuration to a PAN-OS configuration  
-The migration process takes an original configuration folder (**$originalConfigFolderPath**) contains one or more files required for the conversion, a path for the resulting PANOS XML config (**$panosConfigPath**) and the vendor selection (**$vendor**) to determine the conversion logic to be applied.    
+### Step 4. Converting the source configuration to a PAN-OS configuration  
+The migration process takes an original configuration folder (**$originalConfigFolderPath**) contains one or more files required for the conversion, a path for the resulting PANOS XML config (**$panosConfigPath**) and the vendor selection (**$vendor**) to determine the conversion logic to be applied.  
+
+API syntax for Converting 3rd party vendor's configuration:  
+
+| Method | EndPoint                                   | Parameters | Example Value                                                    |
+|-------------|--------------------------------------------|------------|------------------------------------------------------------------|
+|       POST     | `https://<YourExpeditionIP>/api/v1/external-tools/convert` |            | {**"file"**: "/var/www/html/expedition-api/contents/configSamples/CiscoCase/ciscoasa.txt",<br/> **"out"**: "/tmp/cisco.xml"<br/>,**"vendor"**: "ciscoasa" }|
+:::note  
+**Replace "vendor" value with the corresponding supported vendor value**:  
+- **ciscoasa** Cisco ASA
+- **pfsense** Pfsense
+- **sophos** Sophos
+- **sonicwall**  Sonicwall
+- **netscreen**  Juniper Netscreen
+- **fortinet**  Fortinet Fortigate
+- **srx**  Juniper Junos
+- **cp-r80**  Checkpoint > R80
+- **ciscoswitch**  Cisco Switch
+- **ciscoisr** Cisco ISR
+:::  
+
 In the case we have already imported a PAN-OS device into Expedition, it is also possible to provide that device’s identification to use the devices configuration as a base config on which to make the conversion.  
 
 **PHP Snippet 3:** 
-```javascript
+```php
 echo "\n";
 echo "CONVERT CISCO CONFIGURATION TO PALO ALTO\n";
 
@@ -139,11 +236,17 @@ if ($success=='true'){
     print_r($jsonResponse->Contents->response->{'response-messages'}->messages[0]->message);
 }
 ```  
-### 5. Importing the configuration into the Project  
+### Step 5. Importing the configuration into the Project  
 Once the conversion has done, we can import the resulting XML config file into an existing project for later configuration manipulations, such as delete unused objects, rename zones, etc.  Snipt below shows imporitng the converted configuration into the project. 
 
+API syntax for Importing the PAN-OS Configuration into the project:  
+
+| Method | EndPoint                                   | Parameters | Example Value                                                    |
+|-------------|--------------------------------------------|------------|------------------------------------------------------------------|
+|       POST     | `https://<YourExpeditionIP>/api/v1/projects/{projectId}/importConfig`<br/><br/>With sample template value **"project"**: "1"<br/><br/>The full API EndPoint will become: <br/><br/>`https://<YourExpeditionIP>/api/v1/projects/1/importConfig`| **"project"**: "$projectID"          |{**"config"**: "/tmp/cisco.xml" }|  
+
 **PHP Snippet 4:**  
-```javascript
+```php
 
 echo "\n";
 echo "IMPORT CONFIGURATION\n";
@@ -168,13 +271,22 @@ if ($success=='true'){
 ## Assign PAN-OS Device to the Expdition project  
 If we want to interact with a device for being able to retrieve it’s configuration, push a new configuration or learn from the traffic logs that the device has generated (this feature will come in future releases), we need to declare a Panos Device in Expedition.  
 
-### 1. Add a PAN-OS device (Firewall or Panorama)  
+### Step 1. Add a PAN-OS device (Firewall or Panorama)  
 The first action is to generate an API call to Expedition to declare the new device. Some initial information regarding the device is necessary, including the serial number, device name, IP address or hostname to be able to reach the device and the device model.  
 
-The API response will provide us an internal Expedition identificator for the newly generated device.  
+ 
+
+API syntax for adding a PAN-OS device into the project:  
+
+| Method | EndPoint                                   | Parameters | Example Value                                                    |
+|-------------|--------------------------------------------|------------|------------------------------------------------------------------|
+|       POST     | `https://<YourExpeditionIP>/api/v1/devices` |            |{**"serial"**: "serial#ofyourFW",<br/>**"device_name"**: "myFW2",<br/> **"hostname"**: "myFWhostnameorIP", <br/>**"type"**:"pa220"} |  
+
+
+The API response will provide us an internal Expedition identificator for the newly generated device. 
 
 **PHP Snippet 5:**  
-```javascript
+```php
 echo "CREATE NEW DEVICE\n";
 $data = array(
 	"device_name"   => $device_name,
@@ -207,10 +319,14 @@ if ($success=='true'){
             ->description);
 }
 ```  
-### 2. Retrieve Device API Keys  
+### Step 2. Retrieve Device API Keys  
 Once the device is created, if we need to retrieve its content or make future configuration pushes to the device, it will be necessary to have a device API Key.  
 
-The following **PHP Snippet 6** shows how to consume the Expedition API to retrieve Panos Device API keys and register these API keys into the defined device.  
+API syntax for retrieve PAN-OS device API key:  
+
+| Method | EndPoint                                   | Parameters | Example Value                                                    |
+|-------------|--------------------------------------------|------------|------------------------------------------------------------------|
+|       POST     | `https://<YourExpeditionIP>/api/v1/device/keys` |            |{**"id"**: "deviceID",<br/>**"role"**: "admin",<br/> **"username"**: *"YourPAN-OSdeviceLoginusername"*, <br/>**"password"**:*"YourPAN-OSdeviceLoginPassword"*} |  
 
 Notice that to be able to retrieve the API keys, we need to provide the login and password that we use to connect with the PANOS device.  
 
@@ -225,10 +341,13 @@ There are 4 different options: **Admin, User, Viewer, Personal**.
 **.viewer** (project related): all viewer users in a given project will use this API key to interact with the device. In the device audit logs, there will be no unique identification of the user that has submitted the API calls to the device, as it could have been done by any of the project viewers.  
 
 **.personal** (user related): this API key is private to the user that has requested it, and it will be used when this user requires interactions with the Panos Device. A benefit of this key is that in the device audit logs, the user will be identified as having sent the API calls to the device.  
-:::
+:::  
+
+The following **PHP Snippet 6** shows how to consume the Expedition API to retrieve PAN-OS Device API keys and register these API keys into the defined device.  
+
 **PHP Snippet 6:**  
 
-```javascript
+```php
 echo "\n";
 echo "ADD DEVICE KEYS\n";
 
@@ -259,9 +378,15 @@ if ($success=='true'){
 }
 ```
 
-### 3. Retrieve Device’s content  
+### Step 3. Retrieve Device’s content  
 
-We can retrieve the config from a device by specify the value either **`candidate`** or **`running`** in the **($configType)** parameter.  
+We can retrieve the config from a device by specify the value either **`candidate`** or **`running`** in the **{config}** parameter when consuming API call.
+
+API syntax for retrieve PAN-OS device contents:  
+
+| Method | EndPoint                                                                       | Parameters                                                              | Example Value                           |
+|-------------|--------------------------------------------------------------------------------|-------------------------------------------------------------------------|-----------------------------------------|
+|     GET     | `https://<YourExpeditionIP>/api/v1/device/{deviceId}/retrieveContent/{config}`<br/><br/> With **{deviceID}**:"1" **{config}**:"running"<br/><br/>API EndPoint Full path will become: <br/><br/>*`https://<YourExpeditionIP>/api/v1/device/1/retrieveContent/running`*  | **"deviceID"**-> PAN-OS device ID,<br/>**"config"**-> "running"or "candidate" |   |  
 
 This is a task that, depending on the configuration size and the connection speed with the Panos Device, may take a reasonable amount of time.  
 
@@ -271,8 +396,10 @@ So, the API call will respond with a job identified **$jobId** that can be check
 
 In the second part of the code, we present one approach to monitor the execution state of the download config process, which is informed in the status element within the JSON content response. 
 
+
+
 **PHP Snippet 7:**  
-```javascript
+```php
 echo "RETRIEVE DEVICE CONTENT\n";
 
 $configType = "candidate";
@@ -319,15 +446,21 @@ while($jobState != '1'){
     echo "\n";
 }
 ```
-### 4. Attach device to the Expedition Project
+### Step 4. Attach device to the Expedition Project
 
 While a configuration is being downloaded, for instance, it would be possible to attach the device to an existing project, so we have the chance to import the device configuration into the project or so we can send the resulting project configuration back to the device.  
+
+API syntax for attach device to the Expedition project:  
+
+| Method | EndPoint                                                                       | Parameters                                                              | Example Value                           |
+|-------------|--------------------------------------------------------------------------------|-------------------------------------------------------------------------|-----------------------------------------|
+|     PUT     | `https://<YourExpeditionIP>/api/v1/projects/` |  | {**"devices"**:"deviceID", <br/>**"id"**:"projectID"} |  
 
 In the snippet below, we show how the device created above which id we prior stored in the **$deviceId** variable, is attached to the newly created project.
 This call is making a modification on the project settings, therefore we are sending a PUT request to the project route.  
 
 **PHP Snippet 8:**  
-```javascript
+```php
 echo "ASSIGN DEVICE TO PROJECT\n";
 $data = ["devices"=>[$deviceId],
         "id"=>$projectId];
@@ -353,7 +486,7 @@ if ($success=='true'){
 Pushing a project configuration to a device requires having a project created, a device declared and having credentials (Device API keys) to interact with such device.  
 Once we have those, what would remain is the generation of the different API calls to a PANOS device that will receive the configuration, and executing those calls to apply the changes on the device’s candidate configuration. 
 
-### 1. Generating PAN-OS API calls  
+### Step 1. Generating PAN-OS API calls  
 Once we have a project completed and we desire to submit all or part of the configuration to a PANOS device, we will have to generate the API calls.
 We can create **mega, atomic, subatomic and clear** API calls.  
 :::note  
@@ -364,12 +497,18 @@ We can create **mega, atomic, subatomic and clear** API calls.
 **subatomic**: would generate an API call for every element in a configuration. For instance, one API call for each address object in a configuration. This may be required when only certain objects should be submitted to the device.  
 
 **clear**: would generate API calls to delete the content of the desired section  
-:::
+:::  
+
+API syntax for generating PAN-OS API calls:  
+
+| Method | EndPoint                                                                       | Parameters                                                              | Example Value                           |
+|-------------|--------------------------------------------------------------------------------|-------------------------------------------------------------------------|-----------------------------------------|
+|     POST     | `https://<YourExpeditionIP>/api/v1/projects/{projectId}/apiCalls/{type}`<br/><br/>  With sample parameter value: **{projectID}**:"$projectId", **{type} **:"atomic"<br/><br/>  API EndPoint Full path will become: <br/><br/>*`https://<YourExpeditionIP>/api/v1/projects/1/apiCalls/atomic`*   | **"projectId"**-> Expedition Project ID,<br/><br/>**"type"**-> "mega" or "atomic" or "subatomic" or "clear" | {**"serial"**: serial#ofyourFW",<br/>**"role"**: "admin",<br/>**"auth_type"**: "UserPassword",<br/>**"username"**: *"YourPAN-OSdeviceLoginusername"*,<br/>**"password"**: *"YourPAN-OSdeviceLoginpassword"*,<br/>**"sourceId"**: 0,<br/>**"action"**: "set"<br/>} |  
 
 The response will provide us a list of the generated API calls with their corresponding ids and types and order of execution.  
 
 **PHP Snippet 9:**  
-```javascript
+```php
 echo "\n";
 echo "PUSH CONFIG TO DEVICE\n";
 $data = [
@@ -392,9 +531,15 @@ if ($success=='true'){
 }
 ```
 
-### 2. Submitting API calls to the PAN-OS Device 
+### Step 2. Sending API calls to the PAN-OS Device 
 Once generated the API calls, we can submit them to a device, either a Firewall or a Panorama. We can provide the device identification via its serial number. In the case a device is managed by a Panorama, this will be used as a proxy to submit the API calls.
 The Device API key that we have assigned will be used for the submission of the calls. If a personal API key has been registered in Expedition, this will take precedence over an admin/user/viewer API key.  
+API syntax for sending APIcalls to the PAN-OS Device:  
+
+| Method | EndPoint                                                                       | Parameters                                                              | Example Value                           |
+|-------------|--------------------------------------------------------------------------------|-------------------------------------------------------------------------|-----------------------------------------|
+|     POST    | `https://<YourExpeditionIP>/api/v1/projects/{projectId}/device/push` | {**"projectId"**:"$projectId",<br/> With sample parameter value: **{projectID}**:"1", **{type} **:"atomic"<br/><br/>  API EndPoint Full path will become: <br/><br/>*`https://<YourExpeditionIP>/api/v1/projects/1/apiCalls/atomic`*   | **"projectId"**-> Expedition Project ID,<br/><br/>**"type"**-> "mega" or "atomic" or "subatomic" or "clear" | {**"serial"**: serial#ofyourFW",<br/>**"role"**: "admin",<br/>**"auth_type"**: "UserPassword",<br/>**"username"**: *"YourPAN-OSdeviceLoginusername"*,<br/>**"password"**: *"YourPAN-OSdeviceLoginpassword"*,<br/>**"sourceId"**: 0,<br/>**"action"**: "set"<br/>} |  
+
 
 When submitting the API calls, we can enumerate those ones that we want to submit or, if none is specified, all the generated API calls will be submitted to the device in the order of execution.  
 
@@ -403,7 +548,7 @@ Submitting the API calls is executed as a set of tasks in a job. We can monitor 
 For instance, in the below snippet 10, we request information regarding possible errors faced during the submission of the API calls.  
 
 **PHP Snippet 10:**  
-```javascript
+```php
 $data = [
      "serial"=>$serial, 
      "source"=>$source
@@ -478,7 +623,7 @@ The output file path needs to be writable by the www-data user, therefore we rec
 
 **PHP Snippet 11:**  
 
-```javascript
+```php
 $data = [
      "sourceId"=>$source, 
      "out"=>"/home/userSpace/projects/$projectId/panos.xml"
@@ -524,8 +669,6 @@ while($jobState != '1'){
     echo "\n";
     echo ('Configuration exported to '. (string)round($percentage) . '%');
 }
-
-
 if($percentage == '100')
    echo 'Config exported successfully to path '.$out.'/n';
 else
@@ -544,24 +687,4 @@ print_r($jsonResponse);
 $callResultErrors = $jsonResponse->Contents->response->data->content->msg->errors;
 echo "The following errors have been encountered during Config generation:";
 print_r($callResultErrors);
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+```  
