--- a/docs/expedition/workflow.mdx
+++ b/docs/expedition/workflow.mdx
@@ -20,6 +20,12 @@ image: /img/expedition.png
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import Link from "@docusaurus/Link"; 
+export function SetLanguage (lang) {
+  if (typeof window !== 'undefined'){
+    localStorage.setItem('defaultLanguage', lang)
+    window.location.reload()
+  }
+}  
 
 **Choose language for code snippet**
 
